export const snapshot = {};

snapshot[`API Command - Help Text 1`] = `
stdout:
"
Usage: api [document]

Writes: true      
Output modes: json

Description:

  Run raw GraphQL queries or explicitly unprotected mutations.                                                                                       
                                                                                                                                                     
  Pass a GraphQL document or '-' to read stdin to EOF.                                                                                               
                                                                                                                                                     
  Raw mutations require --unprotected and do not provide domain guards, receipts or checkpoints. Queries may retry explicit server overload responses
  within a bounded deadline; mutations are never retried. Inspect data/errors and reconcile uncertain writes.                                        

Options:

  -h, --help                - Show this help.                                                                                    
  --variables-json  <json>  - JSON object of variables (mutually exclusive with --variables-file)                                
  --variables-file  <path>  - Read a JSON object of variables from a file, not stdin (mutually exclusive with --variables-json)  
  --operation-name  <name>  - Select the GraphQL operation (required when the document contains multiple operations)             
  --unprotected             - Explicitly allow a raw mutation without domain guards, receipts or checkpoints                     
  --paginate                - Read one query connection to its final page using \$after (mutations are rejected)                  

"
stderr:
""
`;

snapshot[`API Command - Basic Query 1`] = `
stdout:
'{"data":{"viewer":{"id":"user-1","name":"Test User"}}}'
stderr:
""
`;

snapshot[`API Command - JSON String Variable 1`] = `
stdout:
'{"data":{"team":{"name":"Backend Team"}}}'
stderr:
""
`;

snapshot[`API Command - JSON Boolean And Number 1`] = `
stdout:
'{"data":{"issues":{"nodes":[{"title":"Issue One"},{"title":"Issue Two"}]}}}'
stderr:
""
`;

snapshot[`API Command - No Query Error 1`] = `
stdout:
\`{
  "ok": false,
  "effect": "none",
  "error": {
    "code": "ValidationError",
    "message": "API request failed: No GraphQL document provided",
    "suggestion": "Provide a GraphQL document as an argument: linear api '{ viewer { id } }'\\\\n  Or read stdin explicitly: linear api - < document.graphql"
  }
}
\`
stderr:
""
`;

snapshot[`API Command - Variables File Rejects Stdin 1`] = `
stdout:
'{
  "ok": false,
  "effect": "none",
  "error": {
    "code": "ValidationError",
    "message": "API request failed: --variables-file requires a file path, not stdin"
  }
}
'
stderr:
""
`;

snapshot[`API Command - GraphQL Errors Exit Non-Zero 1`] = `
stdout:
\`{"data":null,"errors":[{"message":"Cannot query field 'nonexistent' on type 'Query'"}]}\`
stderr:
""
`;

snapshot[`API Command - Response Output 1`] = `
stdout:
'{"data":{"viewer":{"id":"user-1"}}}'
stderr:
""
`;

snapshot[`API Command - Variables File 1`] = `
stdout:
'{"data":{"teams":{"nodes":[{"name":"Backend"}]}}}'
stderr:
""
`;

snapshot[`API Command - Paginate 1`] = `
stdout:
'{"data":{"issues":{"nodes":[{"title":"Issue 1"},{"title":"Issue 2"},{"title":"Issue 3"}],"pageInfo":{"hasNextPage":false,"endCursor":null}}}}'
stderr:
""
`;

snapshot[`API Command - No API Key 1`] = `
stdout:
'{
  "ok": false,
  "effect": "none",
  "error": {
    "code": "ValidationError",
    "message": "API request failed: No API key configured",
    "suggestion": "Set LINEAR_API_KEY or run \`linear auth login\`."
  }
}
'
stderr:
""
`;

snapshot[`API Command - JSON Null And False 1`] = `
stdout:
'{"data":{"issues":{"nodes":[]}}}'
stderr:
""
`;

snapshot[`API Command - Value Containing Equals Sign 1`] = `
stdout:
'{"data":{"issues":{"nodes":[{"title":"Test"}]}}}'
stderr:
""
`;

snapshot[`API Command - Paginate Single Page 1`] = `
stdout:
'{"data":{"issues":{"nodes":[{"title":"Only Issue"}],"pageInfo":{"hasNextPage":false,"endCursor":null}}}}'
stderr:
""
`;

snapshot[`API Command - Paginate Non-Connection Query 1`] = `
stdout:
'{
  "ok": false,
  "effect": "none",
  "error": {
    "code": "ValidationError",
    "message": "API request failed: --paginate requires exactly one connection using after: \$after",
    "suggestion": "Split independent connections into separate queries."
  }
}
'
stderr:
""
`;

snapshot[`API Command - File Not Found For Variable 1`] = `
stdout:
'{
  "ok": false,
  "effect": "none",
  "error": {
    "code": "ValidationError",
    "message": "API request failed: File not found: /nonexistent/path.json"
  }
}
'
stderr:
""
`;

snapshot[`API Command - Variables JSON 1`] = `
stdout:
'{"data":{"issues":{"nodes":[{"title":"Issue One"},{"title":"Issue Two"}]}}}'
stderr:
""
`;

snapshot[`API Command - Variables JSON Malformed 1`] = `
stdout:
'{
  "ok": false,
  "effect": "none",
  "error": {
    "code": "ValidationError",
    "message": "API request failed: Invalid JSON for --variables-json"
  }
}
'
stderr:
""
`;

snapshot[`API Command - Variables JSON Non-Object 1`] = `
stdout:
'{
  "ok": false,
  "effect": "none",
  "error": {
    "code": "ValidationError",
    "message": "API request failed: --variables-json must be a JSON object"
  }
}
'
stderr:
""
`;

snapshot[`API Command - HTTP Error Output 1`] = `
stdout:
\`{"errors":[{"message":"Cannot query field 'nonexistent' on type 'Query'","extensions":{"code":"GRAPHQL_VALIDATION_FAILED"}}]}\`
stderr:
""
`;

snapshot[`API Command - JSON String Preserves Leading Zeros 1`] = `
stdout:
'{"data":{"issue":{"title":"Issue 007"}}}'
stderr:
""
`;

snapshot[`API Command - JSON String Preserves Scientific Notation 1`] = `
stdout:
'{"data":{"issue":{"title":"Issue 1e5"}}}'
stderr:
""
`;

snapshot[`API Command - Paginate Multiple Connections Error 1`] = `
stdout:
'{
  "ok": false,
  "effect": "none",
  "error": {
    "code": "ValidationError",
    "message": "API request failed: --paginate requires exactly one connection using after: \$after",
    "suggestion": "Split independent connections into separate queries."
  }
}
'
stderr:
""
`;

snapshot[`API Command - Paginate With Nested Connections 1`] = `
stdout:
'{"data":{"issues":{"nodes":[{"title":"Parent Issue","subIssues":{"nodes":[{"title":"Child Issue"}],"pageInfo":{"hasNextPage":false,"endCursor":null}}}],"pageInfo":{"hasNextPage":false,"endCursor":null}}}}'
stderr:
""
`;

snapshot[`API Command - Conflicting Variable Selectors 1`] = `
stdout:
'{
  "ok": false,
  "effect": "none",
  "error": {
    "code": "ValidationError",
    "message": "API request failed: --variables-json and --variables-file are mutually exclusive"
  }
}
'
stderr:
""
`;
